--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -4,17 +4,16 @@
           <div class="row align-items-center">
                <div class="col-lg-6 col-md-12">
                  <div class="about-img2">
-                     <img src="{% static 'assets/images/bg/choose.png' %}" alt="" class="img-fluid">
+                     <img src="{{about.title_image.url}}" alt="" class="img-fluid">
                  </div>
               </div>
               <div class="col-lg-6 col-md-12">
                   <div class="section-heading">
-                      <span class="subheading">About {{data.school_name}}</span>
-                      <h3>Learn new skills to go ahead for your career</h3>
+                      <span class="subheading">{{about.mini_title_text}}</span>
+                      <h3>{{about.title_text}}</h3>
                   </div>
   
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores excepturi explicabo esse nisi molestias molestiae magni porro magnam, 
-                      iusto sunt aliquid necessitatibus optio quod iste facilis similique eos voluptatum sint?</p>
+                  <p>{{about.sub_text|safe}}</p>
   
                   
               </div>
@@ -30,102 +29,104 @@
                       <span class="subheading">Our Mission</span>
                   </div>
 
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores excepturi explicabo esse nisi molestias molestiae magni porro magnam, 
-                      iusto sunt aliquid necessitatibus optio quod iste facilis similique eos voluptatum sint?</p>
+                  <p>{{about.mission|safe}}</p>
               </div>
               <div class="col-lg-6 col-md-12">
                   <div class="section-heading">
                       <span class="subheading">Our Vision</span>
                   </div>
   
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores excepturi explicabo esse nisi molestias molestiae magni porro magnam, 
-                      iusto sunt aliquid necessitatibus optio quod iste facilis similique eos voluptatum sint?</p>
+                  <p>{{about.vision|safe}}</p>
               </div>
           </div>
       </div>
   </section>
   
-  <section class="counter-wrap pb-100">
-      <div class="container">
-          <div class="row">
-               <div class="col-lg-12 counter-inner">
-                  <div class="row">
-                      <div class="col-lg-3 col-md-6">
-                          <div class="counter-item">
-                              <i class="ti-desktop"></i>
-                              <div class="count">
-                                  <span class="counter h2">90</span>
-                              </div>
-                              <p>Expert Instructors</p>
-                          </div>
-                      </div>
-                      <div class="col-lg-3 col-md-6">
-                          <div class="counter-item">
-                              <i class="ti-agenda"></i>
-                              <div class="count">
-                                  <span class="counter h2">1450</span>
-                              </div>
-                              <p>Total Courses</p>
-                          </div>
-                      </div>
-  
-                      <div class="col-lg-3 col-md-6">         
-                          <div class="counter-item">
-                              <i class="ti-heart"></i>
-                              <div class="count">
-                                  <span class="counter h2">5697</span>
-                              </div>
-                              <p>Happy Students</p>
-                          </div>
-                      </div>
-                  
-                      <div class="col-lg-3 col-md-6">
-                          <div class="counter-item">
-                              <i class="ti-microphone-alt"></i>
-                              <div class="count">
-                                  <span class="counter h2">24</span>
-                              </div>
-                              <p>Creative Events</p>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </section>
-  <section class="about-section section-padding pt-0">
-      <div class="container">
-          <div class="row align-items-center">
-              <div class="col-lg-6 col-md-12">
-                  <div class="section-heading">
-                      <span class="subheading">Top Categories</span>
-                      <h3>Learn new skills to go ahead for your career</h3>
-                  </div>
-  
-                  <div class="about-content">
-                      <div class="about-text-block">
-                          <i class="bi bi-film"></i>
-                          <h4>Details Video tutorial</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicin gelit</p>
-                      </div>
-  
-                       <div class="about-text-block">
-                          <i class="bi bi-support"></i>
-                          <h4>World Class Teachers</h4>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicin gelit</p>
-                      </div>
-  
-                      <a href="#" class="btn btn-main-2"><i class="fa fa-check mr-2"></i>more About Support</a>
-                  </div>
-              </div>
-              <div class="col-lg-6 col-md-12">
-                  <div class="about-img">
-                      <img src="{% static 'assets/images/bg/2-2.png' %}" alt="" class="img-fluid">
-                  </div>
-               </div>
-          </div>
-      </div>
-  </section>
+  <section class="category-section3">
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-lg-6">
+                <div class="section-heading text-center center-heading">
+                    <span class="subheading">Excellent Funfacts</span>
+                    <h3>Reasons to chose Eagerbridge</h3>
+                </div>
+            </div>
+        </div>
+        <div class="row no-gutters">
+            <div class="course-categories">
+                <div class="category-item category-bg-1">
+                  <a href="#">
+                    <div class="category-icon">
+                        <i class="bi bi-laptop"></i>
+                    </div>
+                    <h4>Web Development</h4>
+                    <p>(4 Courses)</p>
+                  </a>
+                </div>
+                <div class="category-item category-bg-2">
+                    <a href="#">
+                        <div class="category-icon">
+                            <i class="bi bi-layer"></i>
+                        </div>
+                        <h4>Design</h4>
+                        <p>(12 Courses)</p>
+                    </a>
+                </div>
+                <div class="category-item category-bg-3">
+                   <a href="#">
+                    <div class="category-icon">
+                        <i class="bi bi-target-arrow"></i>
+                    </div>
+                    <h4>Marketing</h4>
+                    <p>(6 Courses)</p>
+                   </a>
+                </div>
+
+                <div class="category-item category-bg-4">
+                   <a href="#">
+                    <div class="category-icon">
+                        <i class="bi bi-rocket2"></i>
+                    </div>
+                    <h4>Art & Design</h4>
+                    <p>(6 Courses)</p>
+                   </a>
+                </div>
+                <div class="category-item category-bg-5">
+                   <a href="#">
+                    <div class="category-icon">
+                        <i class="bi bi-shield"></i>
+                    </div>
+                    <h4>Design</h4>
+                    <p>(12 Courses)</p>
+                   </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="about-section section-padding">
+    <div class="container">
+        <div class="row align-items-center">
+                <div class="col-lg-6 col-md-12">
+                <div class="about-img">
+                    <img src="{{home.message_image.url}}" alt="" class="img-fluid">
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12">
+                <div class="section-heading">
+                    <span class="subheading">Message</span>
+                    <h3>{{home.message_title}}</h3>
+                </div>
+
+                <div class="about-content">
+                    <p>{{home.message}}</p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>  
   
   <section class="testimonial section-padding">
       <div class="container">
@@ -140,78 +141,28 @@
           <div class="row justify-content-center">
               <div class="col-lg-12">
                   <div class="testimonials-slides owl-carousel owl-theme">
+                    {% for testimonial in testimonial %}
                       <div class="review-item">
                           <div class="client-info">
                               <i class="bi bi-quote"></i>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni eius autem aliquid pariatur rerum. Deserunt, praesentium.
-                               Adipisci, voluptates nihil debitis</p>
-                               <div class="rating">
-                                  <a href="#"><i class="fa fa-star"></i></a>
-                                  <a href="#"><i class="fa fa-star"></i></a>
-                                  <a href="#"><i class="fa fa-star"></i></a>
-                                  <a href="#"><i class="fa fa-star"></i></a>
-                                  <a href="#"><i class="fa fa-star"></i></a>
-                              </div>
+                              <p>{{testimonial.testimonial}}</p>
                           </div>
                           <div class="client-desc">
                               <div class="client-img">
-                                  <img src="assets/images/clients/test-1.jpg" alt="" class="img-fluid">
+                                {% if testimonial.image %}
+                                <img src="{{testimonial.image.url}}" alt="" class="img-fluid">
+                                  {% else %}
+                                  <img src="{{data.logo.url}}" alt="" class="img-fluid">
+
+                                {% endif %}
                               </div>
                               <div class="client-text">
-                                  <h4>John Doe</h4>
-                                  <span class="designation">Developer</span>
+                                  <h4>{{testimonial.position}}</h4>
+                                  <span class="designation">{{testimonial.position}}</span>
                               </div>
                           </div>
                       </div>
-  
-                       <div class="review-item">
-                          <div class="client-info">
-                              <i class="bi bi-quote"></i>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni eius autem aliquid pariatur rerum. Deserunt, praesentium.
-                               Adipisci, voluptates nihil debitis</p>
-                               <div class="rating">
-                                  <a href="#"><i class="fa fa-star"></i></a>
-                                  <a href="#"><i class="fa fa-star"></i></a>
-                                  <a href="#"><i class="fa fa-star"></i></a>
-                                  <a href="#"><i class="fa fa-star"></i></a>
-                                  <a href="#"><i class="fa fa-star"></i></a>
-                              </div>
-                          </div>
-                          <div class="client-desc">
-                              <div class="client-img">
-                                  <img src="assets/images/clients/test-2.jpg" alt="" class="img-fluid">
-                              </div>
-                              <div class="client-text">
-                                  <h4>John Doe</h4>
-                                  <span class="designation">Developer</span>
-                              </div>
-                          </div>
-                      </div>
-  
-  
-                      <div class="review-item">
-                          <div class="client-info">
-                              <i class="bi bi-quote"></i>
-                              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni eius autem aliquid pariatur rerum. Deserunt, praesentium.
-                               Adipisci, voluptates nihil debitis</p>
-                               <div class="rating">
-                                  <a href="#"><i class="fa fa-star"></i></a>
-                                  <a href="#"><i class="fa fa-star"></i></a>
-                                  <a href="#"><i class="fa fa-star"></i></a>
-                                  <a href="#"><i class="fa fa-star"></i></a>
-                                  <a href="#"><i class="fa fa-star"></i></a>
-                              </div>
-                          </div>
-                          <div class="client-desc">
-                              <div class="client-img">
-                                  <img src="assets/images/clients/test-3.jpg" alt="" class="img-fluid">
-                              </div>
-                              <div class="client-text">
-                                  <h4>John Doe</h4>
-                                  <span class="designation">Developer</span>
-                              </div>
-                          </div>
-                      </div>
+                      {% endfor %}
                     </div>
               </div>
           </div>
