--- a/templates/header.html
+++ b/templates/header.html
@@ -67,13 +67,13 @@
                                      <a class="dropdown-item " href="{% url 'about_us' %}">
                                         About US
                                     </a>
-                                     <a class="dropdown-item " href="{% url 'about_us' %}">
-                                        History
+                                     <a class="dropdown-item " href="{% url 'team' %}">
+                                        Team
                                     </a>
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link dropdown-toggle" href="{% url 'blogs' %}">
+                                <a class="nav-link dropdown-toggle" href="{% url 'gallery' %}">
                                     Gallery
                                 </a>
                             </li>
