--- a/templates/team.html
+++ b/templates/team.html
@@ -1,2 +1,33 @@
 {% include 'header.html' %}
+<section class="team section-padding">
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-lg-6">
+                <div class="section-heading center-heading">
+                    <span class="subheading">Our Team</span>
+                    <h3>Our Professional teachers</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicin gelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row">
+            {% for team in team %}
+              
+            <div class="col-lg-4 col-md-6">
+                <div class="team-block">
+                    <div class="team-img">
+                        <img src="{{team.image.url}}" alt="" class="img-fluid">
+                    </div>
+                    <div class="team-info">
+                        <h4>{{team.name}}</h4>
+                        <p>{{team.position}}</p>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</section>
 {% include 'footer.html' %}
